Add support for custom snippets
This makes it easier for users to customise the default templates
without having to clone them and resync their changes after every
foreman upgrade.

--- a/provisioning_templates/PXEGrub2/preseed_default_pxegrub2.erb
+++ b/provisioning_templates/PXEGrub2/preseed_default_pxegrub2.erb
@@ -51,3 +51,5 @@ menuentry '<%= template_name %>' {
   linux<%= efi_suffix %>  <%= @kernel %> interface=auto url=<%= foreman_url('provision')%> ramdisk_size=10800 root=/dev/rd/0 rw auto hostname=<%= @host.name %> <%= options %>
   initrd<%= efi_suffix %> <%= @initrd %>
 }
+
+<%= snippet_if_exists(template_name + " custom menu") %>
