--- a/provisioning_templates/PXELinux/preseed_default_pxelinux.erb
+++ b/provisioning_templates/PXELinux/preseed_default_pxelinux.erb
@@ -38,3 +38,5 @@ LABEL linux
     KERNEL <%= @kernel %>
     APPEND initrd=<%= @initrd %> interface=auto url=<%= foreman_url('provision')%> ramdisk_size=10800 root=/dev/rd/0 rw auto hostname=<%= @host.name %> <%= options %>
     IPAPPEND 2
+
+<%= snippet_if_exists(template_name + " custom menu") %>
