--- a/provisioning_templates/provision/kickstart_default.erb
+++ b/provisioning_templates/provision/kickstart_default.erb
@@ -140,6 +140,7 @@ reboot
 <% end -%>
 
 %packages
+<%= snippet_if_exists(template_name + " custom packages") %>
 yum
 dhclient
 <% if use_ntp -%>
@@ -160,6 +161,7 @@ salt-minion
 
 <% if @dynamic -%>
 %pre
+<%= snippet_if_exists(template_name + " custom pre") %>
 <%= @host.diskLayout %>
 <%= section_end -%>
 <% end -%>
@@ -182,6 +184,7 @@ logger "Starting anaconda <%= @host %> postinstall"
 exec < /dev/tty3 > /dev/tty3
 #changing to VT 3 so that we can see whats going on....
 /usr/bin/chvt 3
+<%= snippet_if_exists(template_name + " custom post") %>
 <% if subnet.respond_to?(:dhcp_boot_mode?) || @host.subnet6.respond_to?(:dhcp_boot_mode?) -%>
 <%= snippet 'kickstart_networking_setup' %>
 <% end -%>
